deployments/gke/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
      - name: fastapi-container
        image: us-central1-docker.pkg.dev/acs-assignment-497901/acs-backend-repo/fastapi-app:v2
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: gcp-key-volume
          mountPath: "/app/secrets"
          readOnly: true
      volumes:
      - name: gcp-key-volume
        secret:
          secretName: gcp-key-secret
